--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon2.png" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
         rel="stylesheet">
@@ -271,7 +271,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
                     <a href="#home" class="text-2xl md:text-1xl font-bold text-primary flex items-center heading-font">
-                        <img src="./icon.jpeg" alt="" srcset="" width="35px" height="35px">
+                        <img src="./icon2.jpeg" alt="" srcset="" width="35px" height="35px">
                         <span class="hidden sm:inline" data-i18n="companyName">VRK Tours & Travels</span>
                         <span class="sm:hidden">VRK</span>
                     </a>
